Add styling to header (nav + hero)

--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Odin Landing Page</title>
   </head>
   <body>
     <header>
       <nav>
-        Header Logo
-        <ul>
+        <div class="header-logo">Header Logo</div>
+        <ul class="header-links">
           <li>header link one</li>
           <li>header link two</li>
           <li>header link three</li>
         </ul>
       </nav>
-      <h1>This website is awesome</h1>
-      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-      <button>Sign up</button>
-      <div>this is a placeholder for an image</div>
+      <div class="hero">
+        <div class="hero-left">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button>Sign up</button>
+        </div>
+        <div class="hero-image">this is a placeholder for an image</div>
+      </div>
     </header>
     <main>
       <section>
