--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="width-cap">
         <div class="header-logo">Header Logo</div>
         <ul class="header-links">
           <li>header link one</li>
@@ -16,32 +16,42 @@
           <li>header link three</li>
         </ul>
       </nav>
-      <div class="hero">
+      <div class="hero width-cap">
         <div class="hero-left">
           <h1>This website is awesome</h1>
-          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
           <button>Sign up</button>
         </div>
         <div class="hero-image">this is a placeholder for an image</div>
       </div>
     </header>
     <main>
-      <section>
+      <section class="section-images">
         <h2>Some random information.</h2>
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
+        <div class="items-container width-cap">
+          <div class="item">
+            <div class="item-image"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="item">
+            <div class="item-image"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="item">
+            <div class="item-image"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="item">
+            <div class="item-image"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+        </div>
       </section>
-      <section>
+      <section class="section-quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
       </section>
-      <section>
+      <section class="section-cta">
         <h3>Call to action! It's time!</h3>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
