--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <section class="section-images">
         <h2>Some random information.</h2>
-        <div class="items-container width-cap">
+        <div class="items-container">
           <div class="item">
             <div class="item-image"></div>
             <p>this is some subtext under an illustration or image</p>
@@ -48,8 +48,10 @@
         </div>
       </section>
       <section class="section-quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <div class="quote-container">
+          <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+          <p class="quote-source">-Thor, God of Thunder</p>
+        </div>
       </section>
       <section class="section-cta">
         <h3>Call to action! It's time!</h3>
