--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
       <div class="hero width-cap">
-        <div class="hero-left">
+        <div class="hero-text">
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
           <button>Sign up</button>
@@ -54,9 +54,13 @@
         </div>
       </section>
       <section class="section-cta">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="cta width-cap">
+          <div class="cta-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button>Sign up</button>
+        </div>
       </section>
     </main>
     <footer>
